--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,12 +1,42 @@
-.home-container {
-  width: 100vw;
-  height: 100vh;
+html, body, #root, .app {
+  height:100%;
+  width:100%;
+  overflow:hidden;
+}
+
+.home-container::before{
+  content:'';
+  position:absolute;
+  top:0;
+  left:0;
+  height:100%;
+  width:100%;
   background-image: url("../../assets/images/Home.jpg");
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  overflow-x: scroll;
+  z-index:-1;
+  opacity:0.75;
+}
+
+.home-container:after{
+  content:'';
+  position:absolute;
+  top:0;
+  left:0;
+  height:100%;
+  width:100%;
+  background:black;
+  z-index:-2;
+}
+
+
+.home-container {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  max-height:100vh;
 }
 
 .home-content {
