--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -26,8 +26,8 @@
 
   --transition: all 400ms ease;
 
-  --primary-font: 'Peralta', cursive, sans-serif;
-  --secondary-font: 'Port Lligat Sans', sans-serif;
+  --primary-font: 'Cousine', monospace, sans-serif;
+  --secondary-font: 'Courier Prime', monospace, sans-serif;
 }
 
 html {
@@ -104,6 +104,7 @@ nav {
   display: flex;
   padding: 0 10px;
   justify-content: center;
+  align-items: center;
   gap: 25px;
   overflow: hidden;
 }
@@ -141,7 +142,7 @@ a:hover {
 .navbar-sections-mobile {
   display: flex;
   padding: 0 10px;
-  justify-content: center;
+  justify-content: space-between;
   gap: 20px;
   overflow: hidden;
 }
